--- a/global.css
+++ b/global.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400&family=Open+Sans:wght@400;600&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
@@ -19,7 +23,17 @@ button{
     font-family: 'Oswald', sans-serif;
     font-weight: 700 !important;
 }
+.f-inter{
+    font-family: 'Inter', sans-serif;
+}
+.f-inter-100{
+    font-family: 'Inter', sans-serif;
+    font-weight: 100 !important;
+}
 .f-oswald-400{
     font-family: 'Oswald', sans-serif;
     
+}
+.f-opensans{
+    font-family: 'Open Sans', sans-serif;
 }
