--- a/aboutus.css
+++ b/aboutus.css
@@ -30,14 +30,18 @@
     .leadership-team .card{
         width: 90% !important;
     }
-    .our-mission img{
-        width: 90% !important;
     
-    }
     .open-positions>div{
         width: 90% !important;
     }
     .open-positions>div img{
         width: 90% !important;
+    }
+}
+
+@media only screen and (max-width: 502px) {
+    .our-mission img{
+        width: 90% !important;
+    
     }
 }
