--- a/creators.css
+++ b/creators.css
@@ -1,40 +1,81 @@
-.navs a>h6{
+.navs a>h6 {
     color: #525252;
     width: max-content;
     /* border: 1px #d5d5d5 solid ;
     border-bottom: none; */
 }
-.navs a{
+
+.navs a {
     transform: translateY(-1px);
 }
-.members{
+
+.members {
     max-width: 64rem;
-    border: 1px #d5d5d5 solid ;
+    border: 1px #d5d5d5 solid;
 
 }
+
+.navs {
+    position: relative !important;
+    display: flex !important;
+    justify-content: center !important;
+    margin: 0 auto !important;
+    padding: 0 !important;
+}
+
+.carousel-indicators [data-bs-target] {
+    box-sizing: content-box;
+    /* flex: auto; */
+    width: auto;
+    height: auto;
+    /* padding: 0; */
+    margin: 0;
+    text-indent: 0px;
+    cursor: pointer;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    opacity: .5;
+    transition: opacity .6s ease;
+}
+
+.carousel-indicators .active {
+    opacity: 1;
+    border: 1px #d5d5d5 solid;
+    border-bottom: white solid 2px;
+    transform: translateY(1px);
+    /* background-color: black; */
+}
+
 /* .navs a h6:active,.navs a h6:focus{ */
-    /* border: 1px #d5d5d5 solid ; */
-    /* border-bottom: none; */
+/* border: 1px #d5d5d5 solid ; */
+/* border-bottom: none; */
 /* } */
-.member{
+.member {
     width: 14rem;
     height: 20rem !important;
-    background: url(../public/Xyaa-1.png);
+    background: url(./public/Xyaa-1.png);
     box-shadow: 0px 0px 10px 0px #5C009E99;
 
 }
-.member img{
+
+.member img {
     width: 1.5rem;
 }
+
 /* .card */
 
 
 @media only screen and (max-width: 320px) {
     .navs {
-      width: 100% !important;
+        width: 100% !important;
     }
-    .navs a h6,.navs a{
+
+    .navs a h6,
+    .navs a {
         width: auto !important;
         text-wrap: wrap;
     }
-  }
+}
