--- a/footer.css
+++ b/footer.css
@@ -8,7 +8,7 @@
 body {
     position: relative;
     min-height: 100vh;
-    padding-bottom: 600px;
+    padding-bottom: 450px;
     /* padding-top: 50rem; */
 }
 
@@ -166,11 +166,17 @@ button {
 
 @media only screen and (max-width: 1075px) {
   body {
-    padding-bottom: 850px;
+    padding-bottom: 750px;
   }
 }
 
 @media only screen and (max-width: 653px) {
+  body {
+    padding-bottom: 900px;
+  }
+}
+
+@media only screen and (max-width: 220px) {
   body {
     padding-bottom: 1000px;
   }
