--- a/global.css
+++ b/global.css
@@ -37,3 +37,7 @@ button{
 .f-opensans{
     font-family: 'Open Sans', sans-serif;
 }
+.fw-big{
+    font-size: 3rem;
+    font-weight:900 !important;
+}
