--- a/index.css
+++ b/index.css
@@ -14,10 +14,10 @@
 .bg-effect .bg h1 {
     font-size: 10rem;
     font-weight: 700;
-    text-shadow: -1px 1px 0 #e1e1e1,
-        1px 1px 0 #e1e1e1,
-        1px -1px 0 #e1e1e1,
-        -1px -1px 0 #e1e1e1;
+    text-shadow: -1px 1px 0 #efefef,
+        1px 1px 0 #efefef,
+        1px -1px 0 #efefef,
+        -1px -1px 0 #efefef;
 }
 
 .bg {
@@ -91,9 +91,9 @@
 
 
 .swiper {
-    width: 53rem;
+    width: 56rem;
     overflow-y: visible !important;
-    padding-top: 10rem;
+    padding-top: 5rem;
 }
 
 .card-slide {
