--- a/global.css
+++ b/global.css
@@ -2,42 +2,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400&family=Open+Sans:wght@400;600&display=swap');
 
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+
 }
 
-button{
+button {
     border: none;
     outline: none;
 }
-.bg-orange{
+
+.bg-orange {
     background-color: #FF5F00 !important;
 }
-.orange{
+
+.orange {
     color: #FF5F00;
 }
-.f-oswald{
+
+.f-oswald {
     font-family: 'Oswald', sans-serif;
     font-weight: 700 !important;
 }
-.f-inter{
+
+.f-inter {
     font-family: 'Inter', sans-serif;
 }
-.f-inter-100{
+
+.f-inter-100 {
     font-family: 'Inter', sans-serif;
     font-weight: 100 !important;
 }
-.f-oswald-400{
+
+.f-oswald-400 {
     font-family: 'Oswald', sans-serif;
-    
+
 }
-.f-opensans{
+
+.f-opensans {
     font-family: 'Open Sans', sans-serif;
 }
-.fw-big{
+
+.fw-big {
     font-size: 3rem;
-    font-weight:900 !important;
+    /* font-weight: 700 !important; */
+}
+
+.extra-bold {
+    /* text-shadow: 0px 1px, 1px 0px, 1px 1px; */
+    font-weight: 900 !important;
+    text-shadow: 0.5px 0.5px,
+        -0.5px 0.5px,
+        0.5px -0.5px,
+        -0.5px -0.5px,
+        0px 0.5px,
+        0.5px 0px,
+        0px -0.5px,
+        -0.5px 0px;
+    letter-spacing: 1.5px;
 }
